Tue Jun  8 20:17:40 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/server.cpp:
        
          - Removed excepted exception output and added verification
            for reconnecting to server1.
          - Fixed compilation errors on wchar builds.

        * NEWS:

          Added entry for bug #3853 fix.
          
Tue Jun  8 15:20:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>

        * NEWS:
        * TAO_IDL/ast/ast_structure_fwd.cpp:
        * TAO_IDL/ast/ast_module.cpp:
        * TAO_IDL/ast/ast_generator.cpp:
        * TAO_IDL/ast/ast_interface_fwd.cpp:
        * TAO_IDL/ast/ast_component_fwd.cpp:
        * TAO_IDL/ast/ast_decl.cpp:
        * TAO_IDL/ast/ast_template_module_ref.cpp:
        * TAO_IDL/be/be_module.cpp:
        * TAO_IDL/be/be_generator.cpp:
        * TAO_IDL/be_include/be_module.h:
        * TAO_IDL/include/include/ast_module.h:
        * TAO_IDL/include/ast_interface_fwd.h:
        * TAO_IDL/include/ast_component_fwd.h:
        * TAO_IDL/include/ast_decl.h:
        * TAO_IDL/include/ast_template_module_ref.h:
        * TAO_IDL/include/ast_structure_fwd.h:
        * TAO_IDL/include/utl_scope.h:
        * TAO_IDL/util/utl_scope.cpp:

          Refactored the previous openings of AST_Modules
          and the lookup of identifiers (and ScopeNames)
          when processing input idl files. Improved the
          speed of processing of large input IDL files.

Tue Jun  8 14:04:38 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/utl_err.h:
        * TAO_IDL/util/utl_err.cpp:
        * TAO_IDL/ast/ast_union_branch.cpp:
        
          Added error message for discriminator/label mismatch, and
          used it where label list names are matched with enum values.

Tue Jun  8 13:57:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_any_extracted_type_decl.cpp: