@@ -1,8 +1,14 @@
+Wed Jun  9 05:39:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_attribute/ccm_init.cpp:
+        * TAO_IDL/be/be_visitor_attribute/set_from_extracted.cpp:
+          Fixed argument not used warnings
+
 Tue Jun  8 20:17:40 UTC 2010  Yan Dai  <dai_y@ociweb.com>
 
         * tests/Bug_3853_Regression/client.cpp:
         * tests/Bug_3853_Regression/server.cpp:
-        
+
           - Removed excepted exception output and added verification
             for reconnecting to server1.
           - Fixed compilation errors on wchar builds.
@@ -10,7 +16,7 @@ Tue Jun  8 20:17:40 UTC 2010  Yan Dai  <dai_y@ociweb.com>
         * NEWS:
 
           Added entry for bug #3853 fix.
-          
+
 Tue Jun  8 15:20:00 UTC 2010  Simon Massey  <simon dot massey at prismtech dot com>
 
         * NEWS:
@@ -43,7 +49,7 @@ Tue Jun  8 14:04:38 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
         * TAO_IDL/include/utl_err.h:
         * TAO_IDL/util/utl_err.cpp:
         * TAO_IDL/ast/ast_union_branch.cpp:
-        
+
           Added error message for discriminator/label mismatch, and
           used it where label list names are matched with enum values.
 
